# AI-Agents

CareerAlterEgo/: app2.py
agentic-email-workflow/: emailWithSendgrid.py  main.py
autonomous trader/: accounts.db  app.py  database.py  market.py
coder/: README.md  pyproject.toml
coder/src/developer_agent_crewai/: crew.py  main.py  report.md
compareLLM/: .env  compareAI.py
deep-reserch-agent/: app.py
engineer_team/: pyproject.toml
engineer_team/src/engineer_team/: main.py
engineer_team/src/engineer_team/config/: tasks.yaml
engineer_team/src/engineer_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
engineer_team/src/engineer_team/tools/: custom_tool.py
langGraph_lerning/: app.py  autogen_langrph.py  sidekick-mini.py
mcp_learning/accounts_mcp/: account.py  account_server.py  accounts.db  accounts.py  accounts_client.py  app.py
mcp_learning/mcp_foundtion/: app.py
mcp_learning/mcp_foundtion/.playwright-mcp/: page-2026-06-24T11-11-24-255Z.yml  page-2026-06-24T11-12-00-577Z.yml  page-2026-06-24T11-21-20-261Z.yml  page-2026-06-24T11-21-48-979Z.yml  page-2026-06-24T11-22-17-956Z.yml  page-2026-06-24T11-22-38-837Z.yml  page-2026-06-24T11-22-50-274Z.yml  page-2026-06-24T11-22-59-582Z.yml
mcp_learning/mcp_foundtion/sandbox/: banoffee.md
my-personal-chat-bot/: 2.txt  app.py
stock_picker_crewai/stock_picker/: AGENTS.md
stock_picker_crewai/stock_picker/src/stock_picker/: crew.py  main.py
stock_picker_crewai/stock_picker/src/stock_picker/config/: agents.yaml  tasks.yaml
(+6 files in other folders)
