[project]
name = "engineer_team"
version = "0.1.0"
description = "engineer_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.7"
]

[project.scripts]
engineer_team = "engineer_team.main:run"
run_crew = "engineer_team.main:run"
train = "engineer_team.main:train"
replay = "engineer_team.main:replay"
test = "engineer_team.main:test"
run_with_trigger = "engineer_team.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
